# awg-just1kbot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260331_0001_initial.py
app/: __init__.py
app/backends/: __init__.py  base.py  helper_adapter.py  helper_client.py  helper_contract.py  helper_protocol.py  kernel_awg.py
app/config/: settings.py
app/db/: session.py
app/db/models/: __init__.py  audit_log.py  device_slot.py  node.py  profile.py  profile_node.py  subscription.py  user.py
app/db/repositories/: __init__.py  node_repository.py  subscription_repository.py  user_repository.py
app/schemas/: __init__.py
app/services/: __init__.py  errors.py  node_preflight.py  runtime_inspection.py
bot/: app.py  handlers.py  main.py
deploy/: README.md
docs/: architecture.md  domain-model.md  node-helper.md  roadmap.md
src/just1kbot/: __init__.py  main.py
tests/: test_backends_smoke.py  test_bot_smoke.py  test_helper_adapter.py  test_helper_client.py  test_helper_protocol.py  test_models_smoke.py  test_node_preflight.py  test_runtime_inspection.py  test_settings.py  test_smoke.py
