[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "just1kbot"
version = "0.1.0"
description = "Initial scaffold for just1kbot"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "just1kbot contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
