[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awg-just1kbot"
version = "0.1.0"
description = "Foundation project for AWG access-management Telegram bot"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "awg-just1kbot contributors" }]
dependencies = [
  "aiogram>=3.4,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "asyncpg>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*", "bot*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
